Corrected Quit name
for #2

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 Munki Catalog Browser.xcodeproj/project.xcworkspace/xcuserdata/btoms.xcuserdatad/UserInterfaceState.xcuserstate
+Munki Catalog Browser.xcodeproj/project.xcworkspace/xcuserdata/btoms.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
+*.xcuserstate
