--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Munki Catalog Browser.xcodeproj/project.xcworkspace/xcuserdata/btoms.xcuserdatad
 Munki Catalog Browser.xcodeproj/project.xcworkspace/xcuserdata/btoms.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
 *.xcuserstate
+.DS_Store
